Fixing styling to be more responsive on mobile and fixing tests to work with newest code.

--- a/src/index.css
+++ b/src/index.css
@@ -14,8 +14,8 @@ code {
 
 .ui.header {
   text-align: center;
-  padding-top: 20px;
-  padding-bottom: 30px;
+  padding-top: 2%;
+  padding-bottom: 3%;
 }
 
 .ui.placeholder.segment {
